gitops/apps/cv-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filip-cv
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: filipcsupka.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filip-cv
                port:
                  number: 80
    - host: www.filipcsupka.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filip-cv
                port:
                  number: 80
  tls:
    - hosts:
        - filipcsupka.online
        - www.filipcsupka.online
      secretName: filip-cv-tls
